# Red-Room

./: .env.example  .gitignore  100-PERCENT-COMPLETE.md  ARCHITECTURE.md  CONTRIBUTING.md  CURRENT-STATUS.md  DEPLOYMENT-SUMMARY.md  DOCKER-INSTALL-QUICK.md  DOCKER-SETUP.md  DONE.md  FINAL-15-PERCENT.md  HACKATHON-CHECKLIST.md  HARDWARE-ACCELERATION-GUIDE.md  HARDWARE-SUPPORT.md  HOW-IT-WORKS.md  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION-SUMMARY.md  INSTALLATION.md  LICENSE  Makefile  PRE-PRODUCTION-CHECKLIST.md  PRODUCTION-READY.md  PROJECT-MASTER.md  QUICK-DEPLOY.md  QUICKSTART-THREE-AGENTS.md  QUICKSTART.md  README-NEW.md  README.md  READY-FOR-PRODUCTION.md  REMOVE-API-KEYS-COMMIT.md  REWRITE-HISTORY-NOW.bat  ROADMAP.md  SAFE-TESTING-SITES.md  SETUP-COMPLETE.md  TEST-SUCCESS.md  THREE-AGENT-SYSTEM.md  WHAT-WORKS-NOW.md  WHATS-DONE.md  WHATS-NEXT.md  clean-and-push.bat  (+21 more)
.github/workflows/: ci.yml
config/: orchestrator-config.yaml
demo-app/: README.md  app.py
deployment/docker/: Dockerfile.exploit-lab  Dockerfile.orchestrator
deployment/kubernetes/: demo-fintech-app.yaml  demo-namespace.yaml
scripts/: cleanup-namespaces.sh  convert-model-to-onnx.py  deploy-demo.sh  setup-amd-hardware.sh  setup-dev-env.sh
src/demo/contracts/: openapi.yaml  security-contracts.yaml
src/demo/fintech_app/: Dockerfile  app.py
src/redroom/: __init__.py  cli.py
src/redroom/agents/: __init__.py
src/redroom/agents/exploit_lab/: __init__.py  evidence_collector.py  exploit_generator.py  gpu_executor.py
src/redroom/agents/saboteur/: __init__.py  contract_parser.py  diff_analyzer.py  diff_parser.py  hypothesis_generator.py  npu_inference.py
src/redroom/agents/scanner/: __init__.py  web_scanner.py
src/redroom/agents/surgeon/: __init__.py  load_tester.py  patch_generator.py  pr_creator.py
src/redroom/database/: __init__.py  scan_history.py
src/redroom/infrastructure/: __init__.py  namespace_lifecycle.py
src/redroom/models/: schemas.py
src/redroom/orchestrator/: __init__.py  langgraph_engine.py  main.py
src/redroom/ui/: __init__.py  terminal_ui.py
src/redroom/utils/: __init__.py  api_pool.py  ast_validator.py  hardware_detector.py  logger.py  metrics.py
src/redroom/workflows/: __init__.py  full_scan.py
templates/: history.html  index_realtime.html
tests/: __init__.py
tests/e2e/: test_demo_scenario.py
tests/integration/: test_agent_integration.py  test_full_pipeline.py
tests/unit/: test_hypothesis_generator.py  test_namespace_lifecycle.py  test_orchestrator.py
