[tool.poetry]
name = "redroom"
version = "0.1.0"
description = "The Infinite Adversary - Autonomous AI Security Ecosystem"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/your-org/red-room"
repository = "https://github.com/your-org/red-room"
keywords = ["security", "devsecops", "ai", "amd", "rocm", "penetration-testing"]
packages = [{include = "redroom", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
langgraph = "^0.2.0"
langchain = "^0.2.0"
langchain-google-genai = "^1.0.0"
onnxruntime-genai = "^0.6.0"
torch = "^2.1.0"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"
redis = "^5.0.0"
kubernetes = "^29.0.0"
docker = "^7.0.0"
pygithub = "^2.2.0"
requests = "^2.31.0"
playwright = "^1.42.0"
httpx = "^0.27.0"
pyyaml = "^6.0"
jinja2 = "^3.1.0"
rich = "^13.7.0"
textual = "^0.52.0"
tree-sitter = "^0.21.0"
tree-sitter-python = "^0.21.0"
tree-sitter-javascript = "^0.21.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
prometheus-client = "^0.20.0"
opentelemetry-api = "^1.23.0"
opentelemetry-sdk = "^1.23.0"
structlog = "^24.1.0"
typer = "^0.9.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"
hypothesis = "^6.98.0"
black = "^24.2.0"
ruff = "^0.3.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
ipython = "^8.21.0"
ipdb = "^0.13.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.0"
mkdocs-material = "^9.5.0"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.8.0"

[tool.poetry.scripts]
redroom = "redroom.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langchain.*",
    "onnxruntime.*",
    "kubernetes.*",
    "docker.*",
    "playwright.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=redroom --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
